--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,9 +10,11 @@
     <color name="gradient_end">#4A90E2</color>
 
     <color name="surface_card">#CCFFFFFF</color>
+    <color name="surface_card_strong">#E6FFFFFF</color>
     <color name="surface_card_border">#80FFFFFF</color>
     <color name="text_primary">#1F2937</color>
     <color name="text_secondary">#6B7280</color>
+    <color name="text_hint">#9CA3AF</color>
     <color name="text_on_dark">#FFFFFF</color>
     <color name="button_primary">#6C63FF</color>
     <color name="button_primary_text">#FFFFFF</color>
