--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,9 +13,16 @@
     <color name="surface_card_strong">#E6FFFFFF</color>
     <color name="surface_card_border">#80FFFFFF</color>
     <color name="text_primary">#1F2937</color>
-    <color name="text_secondary">#6B7280</color>
+
     <color name="text_hint">#9CA3AF</color>
     <color name="text_on_dark">#FFFFFF</color>
     <color name="button_primary">#6C63FF</color>
     <color name="button_primary_text">#FFFFFF</color>
+
+    <color name="dark_bg">#0D0D0D</color>
+    <color name="dark_surface">#1A1A1A</color>
+    <color name="dark_card">#222222</color>
+    <color name="orange_primary">#FF6B00</color>
+    <color name="orange_light">#FF8C00</color>
+    <color name="text_secondary">#999999</color>
 </resources>
