--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="surface_card_border">#80FFFFFF</color>
     <color name="text_primary">#1F2937</color>
 
+    <color name="chip_selector_bg">#1AFF6B00</color>
+
     <color name="text_hint">#9CA3AF</color>
     <color name="text_on_dark">#FFFFFF</color>
     <color name="button_primary">#6C63FF</color>
@@ -25,4 +27,7 @@
     <color name="orange_primary">#FF6B00</color>
     <color name="orange_light">#FF8C00</color>
     <color name="text_secondary">#999999</color>
+
+    <!-- Required by AlertDialogOrange style -->
+    <color name="background_dark">#0D0D0D</color>
 </resources>
