--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,4 +31,17 @@
         <item name="android:textColor">@color/button_primary_text</item>
         <item name="elevation">4dp</item>
     </style>
+
+
+    <style name="OrangeInputTheme" parent="Theme.MaterialComponents">
+        <item name="colorPrimary">@color/orange_primary</item>
+        <item name="colorOnSurface">@color/text_primary</item>
+    </style>
+
+    <style name="AlertDialogOrange" parent="Theme.MaterialComponents.Dialog.Alert">
+        <item name="colorPrimary">@color/orange_primary</item>
+        <item name="android:background">@color/background_dark</item>
+        <item name="android:textColor">@color/text_primary</item>
+    </style>
+
 </resources>
